--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-dom": "^18.3.1",
     "react-markdown": "^9.0.1",
     "react-syntax-highlighter": "^15.6.1",
+    "recharts": "^2.15.0",
     "remark-gfm": "^4.0.0",
     "tailwindcss-motion": "^1.0.0"
   },
